[package]
name = "intelligit"
version = "0.2.6"
edition = "2021"
license = "MIT"
description = "Tool for finding insight in git history"
categories = ["command-line-utilities", "development-tools"]

[dependencies]
tree-sitter = "0.20.10"
itertools = "0.11.0"
serde = { version = "1.0.179", features = ["derive", "rc"] }
gix = { version = "0.55.2", features = [
    "blocking-network-client",
    "blocking-http-transport-reqwest-native-tls",
] }
toml = "0.8.2"
adler = "1.0.2"
serde_json = "1.0.104"
thiserror = "1.0.44"
cc = "1.0.79"
libloading = "0.8.0"
anyhow = "1.0.72"
log = "0.4.19"
ignore = "0.4.20"
time = { version = "0.3.24", features = ["formatting"] }
imara-diff = "0.1.5"
rusqlite = { version = "0.29.0", features = ["bundled"] }
clap = { version = "4.3.19", features = ["derive", "string"] }
colored = "2.0.4"
bytesize = { version = "1.2.0", features = ["serde"] }

# Precompiled tree sitter languages
tree-sitter-rust = "0.20.4"
tree-sitter-c-sharp = "0.20.0"
tree-sitter-json = "0.20.1"
tree-sitter-toml = "0.20.0"
tree-sitter-ocaml = "0.20.4"
tree-sitter-go = "0.20.0"
tree-sitter-lua = "0.0.19"
tree-sitter-typescript = "0.20.3"

[dev-dependencies]
pretty_assertions = "1.4.0"
tree-sitter-rust = "0.20.4"
tree-sitter-toml = "0.20.0"
tempfile = "3.8.0"
