[package]
name = "intelligit"
version = "0.2.9"
edition = "2021"
license = "MIT"
description = "Tool for finding insight in git history"
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/trulsma/intelligit"

[dependencies]
tree-sitter = "0.20.10"
itertools = "0.11.0"
serde = { version = "1.0.179", features = ["derive", "rc"] }
gix = { version = "0.55.2", features = [
    "blocking-network-client",
    "blocking-http-transport-reqwest-native-tls",
] }
toml = "0.8.2"
adler = "1.0.2"
serde_json = "1.0.104"
thiserror = "1.0.44"
cc = "1.0.79"
libloading = "0.8.0"
anyhow = "1.0.72"
log = "0.4.19"
ignore = "0.4.20"
time = { version = "0.3.24", features = ["formatting"] }
imara-diff = "0.1.5"
rusqlite = { version = "0.29.0", features = ["bundled"] }
clap = { version = "4.3.19", features = ["derive", "string"] }
colored = "2.0.4"
bytesize = { version = "1.2.0", features = ["serde"] }

# Precompiled tree sitter languages
tree-sitter-rust = "0.20.4"
tree-sitter-c-sharp = "0.20.0"
tree-sitter-json = "0.20.1"
tree-sitter-toml = "0.20.0"
tree-sitter-ocaml = "0.20.4"
tree-sitter-go = "0.20.0"
tree-sitter-lua = "0.0.19"
tree-sitter-typescript = "0.20.3"
tree-sitter-javascript = "0.20.1"

[dev-dependencies]
pretty_assertions = "1.4.0"
tree-sitter-rust = "0.20.4"
tree-sitter-toml = "0.20.0"
tempfile = "3.8.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.4.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "upload"
